--- a/Housing Price Data/DataCleaning.ipynb
+++ b/Housing Price Data/DataCleaning.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6cfcf74b",
+   "id": "934d37fd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "05868f3a",
+   "id": "66ff6053",
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "26f6b341",
+   "id": "0ee38606",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "70199ef0",
+   "id": "e8ced057",
    "metadata": {},
    "outputs": [
     {
@@ -1780,7 +1780,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "e1612042",
+   "id": "12d89dc8",
    "metadata": {},
    "outputs": [
     {
@@ -1885,7 +1885,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "1b6c1aec",
+   "id": "387e2b25",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1896,7 +1896,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "db60382b",
+   "id": "4c72bf82",
    "metadata": {},
    "outputs": [
     {
@@ -2002,7 +2002,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "aa7565c6",
+   "id": "0ac3cee5",
    "metadata": {},
    "outputs": [
     {
@@ -2035,7 +2035,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "c784e7df",
+   "id": "ec9ad4e0",
    "metadata": {},
    "outputs": [
     {
@@ -2068,7 +2068,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "c1856b39",
+   "id": "0b542f9c",
    "metadata": {},
    "outputs": [
     {
@@ -2440,7 +2440,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "71ad1407",
+   "id": "15973ebb",
    "metadata": {},
    "outputs": [
     {
@@ -2812,7 +2812,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "9f92c650",
+   "id": "0469426c",
    "metadata": {},
    "outputs": [
     {
@@ -3184,7 +3184,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "c9d44ccc",
+   "id": "d576d207",
    "metadata": {},
    "outputs": [
     {
@@ -3289,7 +3289,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "d4e31b7e",
+   "id": "37eb260b",
    "metadata": {},
    "outputs": [
     {
@@ -3312,7 +3312,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "18ef1585",
+   "id": "79dd4d94",
    "metadata": {},
    "outputs": [
     {
@@ -3336,7 +3336,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a2cc1cda",
+   "id": "d72d61d2",
    "metadata": {},
    "outputs": [
     {
@@ -3358,7 +3358,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "cbca13b1",
+   "id": "d888d605",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3370,7 +3370,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "aa36ce15",
+   "id": "deb98156",
    "metadata": {},
    "outputs": [
     {
@@ -3469,8 +3469,68 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 40,
+   "id": "df2dccd6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "cleandata = pd.read_csv('cleantrain.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "33dfe7f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 357 entries, 0 to 356\n",
+      "Data columns (total 24 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   MSSubClass     357 non-null    int64  \n",
+      " 1   LotArea        357 non-null    int64  \n",
+      " 2   BldgType       357 non-null    object \n",
+      " 3   OverallCond    357 non-null    int64  \n",
+      " 4   YearBuilt      357 non-null    int64  \n",
+      " 5   YearRemodAdd   357 non-null    int64  \n",
+      " 6   Foundation     357 non-null    object \n",
+      " 7   BsmtUnfSF      357 non-null    int64  \n",
+      " 8   BsmtFinSF      357 non-null    int64  \n",
+      " 9   TotalBsmtSF    357 non-null    int64  \n",
+      " 10  GrLivArea      357 non-null    int64  \n",
+      " 11  BsmtFullBath   357 non-null    int64  \n",
+      " 12  BsmtHalfBath   357 non-null    int64  \n",
+      " 13  FullBath       357 non-null    int64  \n",
+      " 14  HalfBath       357 non-null    int64  \n",
+      " 15  TotalFullBath  357 non-null    int64  \n",
+      " 16  TotalHalfBath  357 non-null    int64  \n",
+      " 17  TotalBath      357 non-null    float64\n",
+      " 18  BedroomAbvGr   357 non-null    int64  \n",
+      " 19  TotRmsAbvGrd   357 non-null    int64  \n",
+      " 20  GarageCars     357 non-null    int64  \n",
+      " 21  MoSold         357 non-null    int64  \n",
+      " 22  YrSold         357 non-null    int64  \n",
+      " 23  SalePrice      357 non-null    int64  \n",
+      "dtypes: float64(1), int64(21), object(2)\n",
+      "memory usage: 67.1+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "cleandata.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3166c4ab",
+   "id": "13c2c92a",
    "metadata": {},
    "outputs": [],
    "source": []
